demo-web/web-a-demo/web-a-demo/db-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: demo-db
  labels:
    app: demo-db
    app.kubernetes.io/component: demo-db
    app.kubernetes.io/instance: demo-db
    app.kubernetes.io/name: demo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-db
  template:
    metadata:
      labels:
        app: demo-db
        deploymentconfig: demo-db
    spec:
      volumes:
        - name: demo-db-1
          emptyDir: {}
      containers:
        - name: demo-db
          image: >-
            quay.io/michelle_jiang_ibm/demo-db
          ports:
            - containerPort: 3306
              protocol: TCP
            - containerPort: 33060
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: demo-db-1
              mountPath: /var/lib/mysql
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
